Fixed the alignment issue on pinchInPunchOutTime

--- a/php/orangehrm/symfony/plugins/orangehrmAttendancePlugin/web/css/proxyPunchInOutSuccess.css
+++ b/php/orangehrm/symfony/plugins/orangehrmAttendancePlugin/web/css/proxyPunchInOutSuccess.css
@@ -32,7 +32,7 @@ root {
 form#punchTimeForm label {
     position: relative;
     margin-top: 6px;
-    width: 50px
+    width: 60px
 }
 
 .punchTable td{
